--- a/Phase2.ipynb
+++ b/Phase2.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "2de020f6",
    "metadata": {},
    "outputs": [
@@ -933,6 +933,280 @@
     "plt.savefig('EDA/violindamages_by_disaster.png', dpi=300)\n",
     "plt.show()\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "46dcecf9",
+   "metadata": {},
+   "source": [
+    "- ### **Which regions have a greater chance in expecting earthquakes?**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9003c21a",
+   "metadata": {},
+   "source": [
+    "We will start by extracting relevant features from the dataset (integrated.csv) to determine which regions have a greater likelihood of experiencing earthquakes. Then, we will perform EDA, including statistical summaries, visualizations, and correlation analysis."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### **Dataset Observations**\n",
+    "\n",
+    "- The dataset contains 32,319 records with 20 columns.\n",
+    "\n",
+    "- Key relevant columns for earthquake analysis:\n",
+    "  - Disaster Type (Filter for \"Earthquake\")\n",
+    "  - Latitude & Longitude (Geolocation of earthquakes)\n",
+    "  - Magnitude & Magnitude Scale (Severity of earthquakes)\n",
+    "  - Total Deaths, No. Injured, Total Affected (Impact assessment)\n",
+    "  \n",
+    "- Issues:\n",
+    "  - Latitude & Longitude have missing values (~85% missing).\n",
+    "  - Magnitude is missing in a significant portion of rows.\n",
+    "  - The dataset contains multiple disaster types."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "75c4e619",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Index: 1956 entries, 0 to 32285\n",
+      "Data columns (total 20 columns):\n",
+      " #   Column                    Non-Null Count  Dtype  \n",
+      "---  ------                    --------------  -----  \n",
+      " 0   Disaster Group            1956 non-null   object \n",
+      " 1   Disaster Subgroup         1956 non-null   object \n",
+      " 2   Disaster Type             1956 non-null   object \n",
+      " 3   ISO                       1948 non-null   object \n",
+      " 4   Latitude                  1956 non-null   float64\n",
+      " 5   Longitude                 1956 non-null   float64\n",
+      " 6   Start Year                1956 non-null   int64  \n",
+      " 7   Start Month               1956 non-null   float64\n",
+      " 8   Start Day                 1956 non-null   float64\n",
+      " 9   End Year                  1956 non-null   int64  \n",
+      " 10  End Month                 1956 non-null   float64\n",
+      " 11  End Day                   1956 non-null   float64\n",
+      " 12  Total Deaths              1420 non-null   float64\n",
+      " 13  No. Injured               1360 non-null   float64\n",
+      " 14  No. Affected              1121 non-null   float64\n",
+      " 15  No. Homeless              556 non-null    float64\n",
+      " 16  Total Affected            1652 non-null   float64\n",
+      " 17  Total Damages ('000 US$)  500 non-null    float64\n",
+      " 18  Magnitude                 1903 non-null   float64\n",
+      " 19  Magnitude Scale           1956 non-null   object \n",
+      "dtypes: float64(13), int64(2), object(5)\n",
+      "memory usage: 320.9+ KB\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(None,\n",
+       "   Disaster Group Disaster Subgroup Disaster Type  ISO  Latitude  Longitude  \\\n",
+       " 0        Natural       Geophysical    Earthquake  IDN   -1.9708   138.9033   \n",
+       " 3        Natural       Geophysical    Earthquake  TWN   23.1911   120.5429   \n",
+       " 4        Natural       Geophysical    Earthquake  NaN    3.6920   127.8168   \n",
+       " 5        Natural       Geophysical    Earthquake  ITA   38.9658    14.8889   \n",
+       " 6        Natural       Geophysical    Earthquake  GRC   36.5805    25.6218   \n",
+       " \n",
+       "    Start Year  Start Month  Start Day  End Year  End Month  End Day  \\\n",
+       " 0        2025          2.0        7.0      2025        2.0      7.0   \n",
+       " 3        2025          2.0        7.0      2025        2.0      7.0   \n",
+       " 4        2025          2.0        7.0      2025        2.0      7.0   \n",
+       " 5        2025          2.0        7.0      2025        2.0      7.0   \n",
+       " 6        2025          2.0        7.0      2025        2.0      7.0   \n",
+       " \n",
+       "    Total Deaths  No. Injured  No. Affected  No. Homeless  Total Affected  \\\n",
+       " 0           NaN          NaN           NaN           NaN             NaN   \n",
+       " 3           NaN          NaN           NaN           NaN             NaN   \n",
+       " 4           NaN          NaN           NaN           NaN             NaN   \n",
+       " 5           NaN          NaN           NaN           NaN             NaN   \n",
+       " 6           NaN          NaN           NaN           NaN             NaN   \n",
+       " \n",
+       "    Total Damages ('000 US$)  Magnitude Magnitude Scale  \n",
+       " 0                       NaN        5.0               M  \n",
+       " 3                       NaN        4.8               M  \n",
+       " 4                       NaN        4.6               M  \n",
+       " 5                       NaN        5.1               M  \n",
+       " 6                       NaN        4.6               M  )"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "df4 = df = pd.read_csv(\"Datasets/integrated.csv\")\n",
+    "\n",
+    "# Filter dataset for earthquakes only\n",
+    "earthquake_df = df[df[\"Disaster Type\"] == \"Earthquake\"].copy()\n",
+    "\n",
+    "# Convert Latitude and Longitude to numeric values\n",
+    "earthquake_df[\"Latitude\"] = pd.to_numeric(earthquake_df[\"Latitude\"], errors=\"coerce\")\n",
+    "earthquake_df[\"Longitude\"] = pd.to_numeric(earthquake_df[\"Longitude\"], errors=\"coerce\")\n",
+    "\n",
+    "# Drop rows where Latitude or Longitude is missing (since location is essential for regional analysis)\n",
+    "earthquake_df = earthquake_df.dropna(subset=[\"Latitude\", \"Longitude\"])\n",
+    "\n",
+    "# Display basic stats after filtering\n",
+    "earthquake_df.info(), earthquake_df.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "60211107",
+   "metadata": {},
+   "source": [
+    "## 4. Earthquake Risk by Region"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "59e376d2",
+   "metadata": {},
+   "source": [
+    "In this analysis, we aim to explore which regions have a greater likelihood of experiencing earthquakes. By analyzing past earthquake occurrences, we will identify high-risk areas based on:\n",
+    "\n",
+    "- Frequency (How often earthquakes occur)\n",
+    "- Severity (Measured by magnitude)\n",
+    "- Human Impact (Total affected population and deaths)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "97199e56",
+   "metadata": {},
+   "source": [
+    "Our dataset contains 32,319 entries with 20 columns, covering various disaster types, locations, and impacts. Since we are specifically interested in earthquakes, we will extract and analyze relevant earthquake-related data."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2cb6da92",
+   "metadata": {},
+   "source": [
+    "### Dataset Observations:\n",
+    "- The dataset includes details such as latitude, longitude, magnitude, total affected population, and total deaths.\n",
+    "\n",
+    "- There are missing values, particularly in latitude, longitude, and magnitude, which are essential for location-based analysis.\n",
+    "\n",
+    "- The dataset contains various disaster types, so filtering for earthquakes is necessary."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9c2d42de",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "df4 = pd.read_csv(\"Datasets/integrated.csv\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "040fe089",
+   "metadata": {},
+   "source": [
+    "### Dataset Cleaning and Feature Selection:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "439610ee",
+   "metadata": {},
+   "source": [
+    "To focus on earthquake-related insights, we will be selecting the following features:\n",
+    "\n",
+    "- **Latitude & Longitude** (for location-based analysis)\n",
+    "- **ISO** (Country Code)\n",
+    "- **Start Year** (to observe trends over time)\n",
+    "- **Magnitude** (to assess earthquake severity)\n",
+    "- **Total Deaths & Total Affected** (to evaluate human impact)\n",
+    "\n",
+    "We will clean the data by:\n",
+    "\n",
+    "- Filtering for **earthquake occurrences**.\n",
+    "- Converting **latitude and longitude** to numerical values.\n",
+    "- Removing rows with **missing location data** (since location is crucial for regional analysis)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "4c4dcb10",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data Cleaning Completed. Cleaned dataset saved as: Datasets/Earthquake.csv\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Filter dataset for Earthquakes only\n",
+    "earthquake_df = df[df[\"Disaster Type\"] == \"Earthquake\"].copy()\n",
+    "\n",
+    "# Selecting relevant features\n",
+    "selected_columns = [\"ISO\", \"Latitude\", \"Longitude\", \"Start Year\", \"Magnitude\", \"Total Deaths\", \"Total Affected\"]\n",
+    "earthquake_df = earthquake_df[selected_columns]\n",
+    "\n",
+    "# Convert Latitude and Longitude to numeric (in case of incorrect data type)\n",
+    "earthquake_df[\"Latitude\"] = pd.to_numeric(earthquake_df[\"Latitude\"], errors=\"coerce\")\n",
+    "earthquake_df[\"Longitude\"] = pd.to_numeric(earthquake_df[\"Longitude\"], errors=\"coerce\")\n",
+    "\n",
+    "# Drop rows where Latitude or Longitude is missing (as they are essential for location-based analysis)\n",
+    "earthquake_df.dropna(subset=[\"Latitude\", \"Longitude\"], inplace=True)\n",
+    "\n",
+    "# Save the cleaned dataset\n",
+    "cleaned_file_path = \"Datasets/Earthquake.csv\"\n",
+    "earthquake_df.to_csv(cleaned_file_path, index=False)\n",
+    "\n",
+    "print(\"Data Cleaning Completed. Cleaned dataset saved as:\", cleaned_file_path)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "65a89c98",
+   "metadata": {},
+   "source": [
+    "### Dataset Cleaning and Feature Selection:\n",
+    "We will now analyze **earthquake trends** using different types of visualizations."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f32744a9",
+   "metadata": {},
+   "source": [
+    "#### 1. Scatter Plot: Earthquake Locations\n",
+    "A scatter plot will help us visualize where earthquakes have occurred globally."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "643cb154",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
