--- a/Phase2.ipynb
+++ b/Phase2.ipynb
@@ -1282,6 +1282,42 @@
   },
   {
    "cell_type": "markdown",
+   "id": "f75f3989",
+   "metadata": {},
+   "source": [
+    "# EDA Comparison: Primary vs. Secondary Data\n",
+    "\n",
+    "## Investigation Notes\n",
+    "- **Row Count**: Secondary data has **16,000+ rows**, while primary data (collected via API) has **fewer than 100**.\n",
+    "- **Disaster Count**: Secondary records **over 10 disaster types**, whereas primary has **only 5 types**.\n",
+    "- **Time Period**:  \n",
+    "  - Primary data records disasters **from 2020 onward** (recent events).  \n",
+    "  - Secondary data covers disasters **from the 1900s onward** (historical perspective).  \n",
+    "- **Terminology Differences**: Disaster names differed between datasets (e.g., \"EQ\" in primary corresponds to \"Earthquake\" in secondary).  \n",
+    "- **Categorical Data**: Since disaster types are categorical, we couldn't compare means, so we analyzed **modes (most frequent occurrences).**  \n",
+    "\n",
+    "## Comparison Table\n",
+    "\n",
+    "| Aspect                     | Primary Data (API)                           | Secondary Data (Historical)                  |\n",
+    "|----------------------------|----------------------------------------------|----------------------------------------------|\n",
+    "| **Row Count**              | <100                                         | 16,000+                                     |\n",
+    "| **Disaster Count**         | 5 disaster types                            | Over 10 disaster types                     |\n",
+    "| **Time Period**            | 2020 and later                              | 1900s and later                             |\n",
+    "| **Most Affected Country**  | Greece (10 disasters)                        | China (1,200+ disasters)                    |\n",
+    "| **Most Frequent Disaster** | Varies by country; Asia → Earthquakes, Oceania → Wildfires | Asia → **Floods** (most frequent overall)   |\n",
+    "| **Disaster Type Mapping**  | Limited to **news-reported disasters**       | Covers a **wider variety** of disasters     |\n",
+    "\n",
+    "## Key Observations\n",
+    "- **Primary data aligns with recent media coverage**, highlighting major newsworthy disasters.  \n",
+    "- **Secondary data provides historical trends** and a **wider range of disasters** over time.  \n",
+    "- **Asia has the most disasters in both datasets,** but secondary data highlights **floods** as the most frequent.  \n",
+    "- **Oceania (primary) sees mostly wildfires,** while secondary shows **more disaster diversity.**  \n",
+    "\n",
+    "---\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "0a6c9484",
    "metadata": {},
    "source": [
