--- a/Phase2.ipynb
+++ b/Phase2.ipynb
@@ -40,17 +40,16 @@
     "- **ISO codes** and **disaster group types** are inherently categorical and often represent meaningful information (such as country codes or disaster classifications).\n",
     "- Encoding them into numeric  might obscure the meaning of these features in the dataset, making it harder to interpret the results during EDA.\n",
     "  \n",
-    "By keeping these qualitative variables in their original format (e.g., as text or labels), it was easier to:\n",
+    "By keeping these qualitative variables in their original format , it was easier to:\n",
     "  - Understand the distribution of disasters across countries and disaster groups.\n",
     "  - Perform frequency analysis or count plots without additional preprocessing steps.\n",
     "  - Quickly identify any patterns or anomalies in the data related to specific categories.\n",
     "\n",
     "#### 2. **Initial Focus on Data Exploration**\n",
     "\n",
-    "At the stage of EDA, the primary goal is to **explore** and **understand** the data. Encoding qualitative data can be useful for machine learning models or statistical analyses later on, but in the early phases of EDA, we wanted to:\n",
-    "  - **Explore the relationships** between variables without the complexity of encoded values.\n",
-    "  - **Visualize the distributions** and frequency counts of categorical variables in their raw form, which was more informative and straightforward.\n",
-    "  \n"
+    "At the stage of EDA, the primary goal is to **explore** and **understand** the data. While we avoided transformation in EDA, these steps are **essential for clustering, etc. Below, after EDA, we will:\n",
+    "\n",
+    "- **Encode categorical variables** (e.g., country names, disaster types) to numerical values for modeling.  \n"
    ]
   },
   {
@@ -3002,6 +3001,88 @@
     "4. **Possible explanations for the trend**\n",
     "   - The increase in recorded earthquakes is likely due to advancements in detection technology and a greater number of seismic stations worldwide.\n",
     "   - Climate and geological factors may also contribute, but further analysis is needed to confirm any direct correlations."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5a68666c",
+   "metadata": {},
+   "source": [
+    "## Data Encoding"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "8bb24fae",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Encoded dataset saved to Datasets/encoded.csv\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "from sklearn.preprocessing import LabelEncoder, OneHotEncoder\n",
+    "\n",
+    "# Load dataset\n",
+    "file_path = \"Datasets/integrated.csv\"\n",
+    "df = pd.read_csv(file_path)\n",
+    "\n",
+    "# Drop rows with completely missing essential categorical data\n",
+    "df.dropna(subset=['Disaster Group', 'Disaster Subgroup', 'Disaster Type', 'ISO'], inplace=True)\n",
+    "\n",
+    "# Convert numerical columns with missing values to appropriate types, filling NaN with 0\n",
+    "df.fillna({\n",
+    "    'Start Month': 0, 'Start Day': 0, 'End Month': 0, 'End Day': 0,\n",
+    "    'Total Deaths': 0, 'No. Injured': 0, 'No. Affected': 0,\n",
+    "    'No. Homeless': 0, 'Total Affected': 0, 'Total Damages (\\'000 US$)': 0\n",
+    "}, inplace=True)\n",
+    "\n",
+    "# Convert Latitude & Longitude to numeric, forcing errors to NaN and filling with 0\n",
+    "df['Latitude'] = pd.to_numeric(df['Latitude'], errors='coerce').fillna(0)\n",
+    "df['Longitude'] = pd.to_numeric(df['Longitude'], errors='coerce').fillna(0)\n",
+    "\n",
+    "# Apply Label Encoding to categorical columns \n",
+    "label_enc_cols = ['ISO']\n",
+    "label_enc = LabelEncoder()\n",
+    "for col in label_enc_cols:\n",
+    "    df[col] = label_enc.fit_transform(df[col])\n",
+    "\n",
+    "# Apply One-Hot Encoding to categorical columns with more categories\n",
+    "one_hot_cols = ['Disaster Group', 'Disaster Subgroup', 'Disaster Type']\n",
+    "df = pd.get_dummies(df, columns=one_hot_cols, drop_first=True)\n",
+    "\n",
+    "# Save the cleaned and encoded dataset\n",
+    "output_path = \"Datasets/encoded.csv\"\n",
+    "df.to_csv(output_path, index=False)\n",
+    "\n",
+    "print(f\"Encoded dataset saved to {output_path}\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ed3e323c",
+   "metadata": {},
+   "source": [
+    "To prepare our dataset for further analysis, we performed the following data cleaning and encoding steps:  \n",
+    "\n",
+    "1. **Handled Missing Values**  \n",
+    "   - Dropped or imputed missing values where appropriate.  \n",
+    "   - Converted Latitude and Longitude to numeric format.  \n",
+    "\n",
+    "2. **Applied Encoding**  \n",
+    "   - **Label Encoding**: Used for ISO to convert country codes into numerical values.  \n",
+    "   - **One-Hot Encoding**: Applied to categorical features (Disaster Group, Disaster Subgroup, Disaster Type) to retain interpretability.  \n",
+    "\n",
+    "3. **Saved Processed Dataset**  \n",
+    "   - The cleaned and encoded dataset was stored as Datasets/encoded.csv for further modeling and analysis.  \n",
+    "\n",
+    "Encoding was necessary for machine learning applications, but raw categorical values were preserved during initial EDA for readability.  \n"
    ]
   }
  ],
