--- a/Phase2.ipynb
+++ b/Phase2.ipynb
@@ -223,6 +223,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "bafed5f0",
+   "metadata": {},
+   "source": [
+    "Here, we performed an initial **Exploratory Data Analysis (EDA)** on the `gdacs_disasters.csv` dataset to assess its structure, completeness, and key attributes. We first examined dataset metadata, including column types and memory usage, followed by summary statistics.\n",
+    "\n",
+    "The analysis revealed that while most core attributes like **Latitude, Longitude, Disaster Group, and Temporal Data** are fully populated, several columns contain missing values. Notably, the **\"Event Name\"** column has significant missing data (only 20 entries), and the **\"Losses\"** column is entirely empty, requiring imputation or exclusion. Additionally, **ISO codes and Country names** have minor gaps that may need standardization or correction.\n",
+    "\n",
+    "This preliminary assessment highlights potential data quality issues and sets the foundation for further cleaning and analysis, particularly in handling missing values and ensuring consistency in location-based information."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "id": "7b301479",
@@ -386,15 +398,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a7d07633",
+   "id": "abb75165",
    "metadata": {},
    "source": [
-    "From the dataset exploration, we observed that **EQ (Earthquake)** is the most frequent disaster type, followed by **WF (Wildfire)**.\n"
+    "The dataset was cleaned by removing the **\"Losses\"** column, which contained no data, and dropping rows where both **\"Country\"** and **\"ISO\"** were missing. This reduced the dataset to **91 entries**, ensuring completeness in geographical identifiers. While most key attributes remain fully populated, some missing values persist in **\"Event Name\"** and **\"Magnitude Unit\"**, which may require further handling. The cleaned dataset was saved as **`api_dataset.csv`** for analysis."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "4ad6329e",
    "metadata": {},
    "outputs": [
@@ -593,18 +605,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6b527028",
+   "id": "1fe52600",
    "metadata": {},
    "source": [
-    "Countries with the most occurance in diasters are Greece followed by Australia and Argentina "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "c343e995",
-   "metadata": {},
-   "source": [
-    "From the dataset exploration, we observed that **EQ (Earthquake)** is the most frequent disaster type, followed by **WF (Wildfire)**.\n"
+    "Here, we analyzed disaster distributions across countries and disaster groups. We first grouped **disaster occurrences by country**, identifying **Greece, Australia, and Argentina** as the top three countries with the most reported disasters. Additionally, we examined the distribution of **disaster groups**, where **earthquakes (EQ) and wildfires (WF) accounted for the majority of recorded events**, followed by **droughts (DR), floods (FL), and tropical cyclones (TC).**\n",
+    "\n",
+    "The results emphasize the concentration of disasters in specific regions and the predominance of **natural disasters** over others. This insight can help in **disaster preparedness efforts**, particularly in countries experiencing frequent events."
    ]
   },
   {
@@ -702,9 +708,18 @@
   },
   {
    "cell_type": "markdown",
+   "id": "ace024d1",
+   "metadata": {},
+   "source": [
+    "Here, we analyzed the distribution of disaster groups across continents by mapping countries to their respective regions. Each disaster was categorized based on its continent using ISO country codes to group occurrences."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "21836df2",
    "metadata": {},
    "source": [
+    "Result from figure:\n",
     "\n",
     "- **Wildfires (WF) occur most frequently in Oceania**, followed by South America indicating a significant climate-driven disaster pattern in the region.\n",
     "- **Earthquakes (EQ) are most prevalent in Asia**, highlighting the region’s vulnerability to seismic activity.\n",
@@ -757,6 +772,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "26cef03b",
+   "metadata": {},
+   "source": [
+    "We analyzed disaster occurrences over time by counting the number of disasters per Start Year. The results indicate a significant increase in reported disasters in 2025, with fewer events recorded in 2022, 2023, and 2024. This trend may suggest improved disaster reporting, increased disaster frequency, or dataset biases favoring recent years.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "d2b11003",
    "metadata": {},
    "source": [
@@ -801,6 +824,15 @@
     "print(df.columns)\n",
     "\n",
     "df.to_csv(\"Datasets/api_dataset.csv\", index=False)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b0c1a16f",
+   "metadata": {},
+   "source": [
+    "First, we cleaned the emdat.csv dataset by removing rows where both \"Country\" and \"ISO\" were missing, ensuring that all retained entries have valid location identifiers.\n",
+    "After cleaning, the dataset was examined for summary statistics, missing values, and column consistency to assess its quality. The processed dataset was then saved as api_dataset.csv, providing a structured and refined dataset for further analysis."
    ]
   },
   {
@@ -891,6 +923,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "1b31145a",
+   "metadata": {},
+   "source": [
+    "Then, we analyzed disaster distributions across countries and disaster types. The **top 10 countries with the most disasters** include **China, India, the USA, Indonesia, and the Philippines**, indicating regions with high disaster occurrences, possibly due to their geographic and climatic conditions.\n",
+    "\n",
+    "The **distribution of disaster types** highlights that **floods, storms, and road-related disasters** are the most frequent globally, with floods being the dominant event. Other notable disasters include **epidemics, earthquakes, and extreme temperature events**. This analysis underscores the importance of **disaster risk management** and **preparedness in high-risk regions**."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "b3c302b2",
@@ -966,6 +1008,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "31b0a58c",
+   "metadata": {},
+   "source": [
+    "Here, we analyzed the **distribution of natural disasters across continents**, categorizing them by **disaster type**. The results reveal that **floods and storms** are the most prevalent disasters, particularly in **Asia and North America**, with Asia experiencing the highest flood occurrences. \n",
+    "\n",
+    "**Epidemics** are notably frequent in **Africa**, while **earthquakes** are concentrated in **Asia** and **South America**. **Wildfires and extreme temperatures** occur across multiple continents but are particularly significant in **North America and Oceania**. \n",
+    "\n",
+    "This analysis highlights **regional vulnerabilities to different disaster types**, emphasizing the need for **continent-specific disaster preparedness and mitigation strategies**."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "7358d69b",
@@ -1007,6 +1061,16 @@
     "    plt.savefig(\"EDA/emdat_disasters_by_start_year.png\")\n",
     "    plt.show()\n",
     "    plt.close()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "efae6678",
+   "metadata": {},
+   "source": [
+    "Finally, we examined the frequency of disasters over time by tracking the number of recorded events per **Start Year**. We observed a **peak in disaster occurrences between 2000 and 2005**, followed by a gradual decline, with occasional fluctuations in later years. \n",
+    "\n",
+    "This trend may be influenced by **changes in natural hazard activity, advancements in disaster management, or shifts in reporting accuracy**. The recent decrease could also indicate **incomplete data for the most recent years**, requiring further validation. By analyzing these long-term patterns, we can gain valuable insights to **enhance disaster preparedness and response strategies**."
    ]
   },
   {
@@ -1171,6 +1235,14 @@
     "print(df.info())  \n",
     "print(df.head())  \n",
     "print(df.describe())  # Summary statistics\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "98489da2",
+   "metadata": {},
+   "source": [
+    "We loaded and explored the **integrated.csv** dataset to understand its structure, data types, and key statistics. By examining **dataset info, first few rows, and summary statistics**, we identified potential missing values, distributions, and outliers. This initial assessment helps determine necessary **data cleaning and preprocessing steps** for further analysis."
    ]
   },
   {
@@ -1378,6 +1450,16 @@
     "\n",
     "print(\"\\nFeature Relevance Check:\\n\")\n",
     "print(df.nunique())  # Shows unique values per column to check for low-variance features\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "78ee33cf",
+   "metadata": {},
+   "source": [
+    "We conducted an initial **exploratory analysis** of the dataset by inspecting its structure, missing values, duplicates, and feature relevance. The **dataset info** revealed the number of entries, column types, and null values. The **first five rows** provided a snapshot of the data, while **summary statistics** highlighted key numerical distributions. \n",
+    "\n",
+    "Additionally, we **checked for missing values and duplicate records**, identifying potential data quality issues. Lastly, the **feature relevance check** assessed unique values per column, helping us detect **low-variance features** that may not contribute significantly to analysis. This exploration guides **data cleaning and preprocessing** for further insights."
    ]
   },
   {
@@ -2036,6 +2118,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "269ede4e",
+   "metadata": {},
+   "source": [
+    "This analysis visualizes the **most frequently occurring disaster subgroups across all regions**. The bar chart shows that **hydrological disasters** (e.g., floods) are the most common, followed by **meteorological disasters** (e.g., storms). **Geophysical and biological disasters** also appear frequently, while **climatological and extraterrestrial disasters** occur less often.\n",
+    "\n",
+    "These insights help in understanding **global disaster trends**, emphasizing the need for **disaster preparedness and mitigation efforts** for the most common disaster types."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "6499c81e",
@@ -2174,10 +2266,7 @@
    "id": "bffb155c",
    "metadata": {},
    "source": [
-    "This chart visualizes the number of natural disasters recorded each year, with a clear focus on the 2000s. The observed spike in disasters starting from the early 2000s suggests that disasters from earlier years may not have been fully recorded or documented, possibly due to limited data availability, underreporting, or lack of technological infrastructure for disaster tracking in the past. This trend highlights the importance of considering data completeness when analyzing historical disaster trends.\n",
-    "\n",
-    "\n",
-    "\n"
+    "This chart visualizes the **number of natural disasters** recorded each year, with a clear focus on the **2000s**. The observed spike in disasters starting from the early **2000s** suggests that disasters from **earlier years** may not have been fully **recorded or documented**, possibly due to **limited data availability, underreporting**, or lack of **technological infrastructure** for **disaster tracking** in the past. This trend highlights the importance of considering **data completeness** when analyzing **historical disaster trends**."
    ]
   },
   {
